# ComfyUI-mnemic-nodes

./: .env.example  .gitignore  README.md  README_WILDCARD.md  __init__.py  pyproject.toml  requirements.txt
README/: audio_visualizer.md  batch_wildcard_sampler.md  colorful_starting_image.md  download_image_from_url.md  format_date_time.md  generate_negative_prompt.md  get_file_path.md  groq_api_alm_transcribe.md  groq_api_completion.md  groq_api_llm.md  groq_api_vlm.md  ideogram4_prompt_builder.md  ideogram4_random_prompter.md  image_save_with_metadata.md  literal_bool.md  literal_float.md  literal_int.md  literal_string.md  load_image_advanced.md  load_image_temporarily.md  load_images_from_path.md  load_random_checkpoint.md  load_text_image_pairs.md  lora_tag_loader.md  metadata_extractor.md  metadata_extractor_list.md  metadata_extractor_single.md  prompt_property_extractor.md  random_bool.md  random_color.md  random_float_in_range.md  random_int_in_range.md  random_seed.md  random_string.md  resolution_selector.md  save_text_file.md  string_cleaning.md  string_concat.md  string_text_extractor.md  string_text_splitter.md  (+3 more)
docs/: ideogram1.txt  ideogram2.md
nodes/: __init__.py  audio_visualizer.py  batch_wildcard_sampler.py  colorful_starting_image.py  download_image_from_url.py  fetch_and_save_image.py  format_date_time.py  generate_negative_prompt.py  get_file_path.py  groq_api_alm_transcribe.py  groq_api_alm_translate.py  groq_api_completion.py  groq_api_llm.py  groq_api_vlm.py  ideogram4_prompt_builder.py  ideogram4_random_prompter.py  image_save_with_metadata.py  literal_bool.py  literal_float.py  literal_int.py  literal_string.py  load_image_advanced.py  load_image_temporarily.py  load_images.py  load_random_checkpoint.py  load_text_image_pair_single.py  load_text_image_pairs.py  lora_tag_loader.py  (+23 more)
(+44 files in other folders)
