[project]
name = "comfyui-mnemic-nodes"
description = "Added Qwen Image resolutions from #34"
version = "2.2.6"
license = { file = "LICENSE" }
dependencies = ["configparser", "groq", "transformers", "torch", "tiktoken", "imageio", "tqdm", "piexif", "requests", "colorama", "opencv-python"]

[project.urls]
Repository = "https://github.com/MNeMoNiCuZ/ComfyUI-mnemic-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mnemic"
DisplayName = "ComfyUI-mnemic-nodes"
Icon = ""
