[project]
name = "comfyui-mnemic-nodes"
description = "Added fuzzy search to global settings, fixed a bug where LoRA loader wasn't respecting console logging settings on the node"
version = "2.2.9"
license = { file = "LICENSE" }
dependencies = ["configparser", "groq", "transformers", "torch", "tiktoken", "imageio", "tqdm", "piexif", "requests", "colorama", "opencv-python"]

[project.urls]
Repository = "https://github.com/MNeMoNiCuZ/ComfyUI-mnemic-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mnemic"
DisplayName = "ComfyUI-mnemic-nodes"
Icon = ""
