[project]
name = "comfyui-mnemic-nodes"
description = "Moved console logging, timeouts, fuzzy search, logging candidates and more to Settings for the node pack."
version = "2.3.0"
license = { file = "LICENSE" }
dependencies = ["configparser", "groq", "transformers", "torch", "tiktoken", "imageio", "tqdm", "piexif", "requests", "colorama", "opencv-python"]

[project.urls]
Repository = "https://github.com/MNeMoNiCuZ/ComfyUI-mnemic-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mnemic"
DisplayName = "ComfyUI-mnemic-nodes"
Icon = ""
